--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\chq-brandond\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
