Added private/public league logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 env/
 fantasyFootball/settings.py
-home/__pycache__/
+__pycache__/
 home/migrations/__pycache__/
 fantasyFootball/__pycache__/settings.cpython-38.pyc
 fantasyFootball/__pycache__/urls.cpython-38.pyc
