--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__/
 home/migrations/__pycache__/
 fantasyFootball/__pycache__/settings.cpython-38.pyc
 fantasyFootball/__pycache__/urls.cpython-38.pyc
+db.sqlite3
